--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -29,7 +29,7 @@
   {% if author.instagram %}<a href="http://instagram.com/{{ author.instagram }}" class="author-links" target="_blank"><i class="fa fa-fw fa-instagram"></i> Instagram</a>{% endif %}
   {% if author.tumblr %}<a href="http://{{ author.tumblr }}.tumblr.com" class="author-links" target="_blank"><i class="fa fa-fw fa-tumblr-square"></i> Tumblr</a>{% endif %}
   {% if author.stackoverflow %}<a href="http://stackoverflow.com/users/{{ author.stackoverflow }}" class="author-links" target="_blank"><i class="fa fa-fw fa-stack-overflow"></i> Stackoverflow</a>{% endif %}
-  {% if author.speakerdeck %}<a href="http://speakerdeck.com/{{ author.speakerdeck }}" class="author-links" target="_blank"><i class="fa fa-fw fa-desktop"></i> Speaker Deck</a>{% endif %}
+  {% if author.speakerdeck %}<a href="http://speakerdeck.com/{{ author.speakerdeck }}" class="author-links" target="_blank"><i class="fa fa-speaker-deck"></i> Speaker Deck</a>{% endif %}
   {% if author.lastfm %}<a href="http://lastfm.com/user/{{ author.lastfm }}" class="author-links" target="_blank"><i class="fa fa-fw fa-music"></i> Last.fm</a>{% endif %}
   {% if author.dribbble %}<a href="http://dribbble.com/{{ author.dribbble }}" class="author-links" target="_blank"><i class="fa fa-fw fa-dribbble"></i> Dribbble</a>{% endif %}
   {% if author.pinterest %}<a href="http://www.pinterest.com/{{ author.pinterest }}" class="author-links" target="_blank"><i class="fa fa-fw fa-pinterest"></i> Pinterest</a>{% endif %}
