--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -12,10 +12,10 @@
 
   <h3 itemprop="name">{{ author.name }}</h3>
   <p>
-    Ruby Developer.<br>
-    Event Photographer.<br>
-    Wannabe runner.<br>
+    Software developer.<br>
     <a href="http://www.rug.si/">RubySlovenia</a> organizer.<br>
+    Long(er) distance runner.<br>
+    Event photographer.<br>
     Special.<br>
     Not necessarily in that order.
   </p>
