--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -13,6 +13,7 @@
   <h3 itemprop="name">{{ author.name }}</h3>
   <p>
     <span>💻</span> Software Developer<br>
+    <span>🎙️</span> <a href="http://parallelpassion.com/">Podcaster</a><br>
     <span>🕴</span> International Speaker<br>
     <span>👨‍🏫 </span> <a href="http://www.rug.si/">RubySlovenia</a> organizer<br>
     <span>☕️</span> Home Barista<br>
