--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -12,15 +12,15 @@
 
   <h3 itemprop="name">{{ author.name }}</h3>
   <p>
-    <span>💻</span> Software Developer<br>
+    <span>👨‍💻</span> Software Developer<br>
     <span>🎙️</span> <a href="http://parallelpassion.com/">Podcaster</a><br>
     <span>🕴</span> International Speaker<br>
-    <span>👨‍🏫 </span> <a href="http://www.rug.si/">RubySlovenia</a> organizer<br>
+    <span>👨‍🏫</span> <a href="http://www.rug.si/">RubySlovenia</a> organizer<br>
     <span>☕️</span> Home Barista<br>
     <span>🏃</span> Marathon Runner<br>
     <span>📷</span> Event Photographer<br>
+    <span>📖</span> Aspiring Stoic<br>
     <span>🦄</span> Special<br>
-    <span>🤷‍♂️️</span> Not necessarily all at once
   </p>
   {% if author.email %}<a href="mailto:{{ author.email }}" class="author-links" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a>{% endif %}
   {% if author.twitter %}<a href="http://twitter.com/{{ author.twitter }}" class="author-links" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a>{% endif %}
